css/source/bauhaus.scss
#bauhaus {
    width: 100%; margin: 100px 0 0 0;
    text-align: center;
    
    .rects {
        display: inline-block; position: relative;
        max-width: 400px; width: 100%;
    
        > * {
            display: block; position: absolute; z-index: 3;
        }
        
        .red, .blue, .orange, .green {
            background-color: #2f2f2f;
        }
        
        @mixin rect($top, $left, $width, $height, $delay) {
            top: $top; left: $left;
            width: $width; height: $height;
            @include transition(.4s ($delay * 1.4), background-color .6s (1.3s + ($delay / 2)));
        }
        
        .r1 {@include rect(  0,   0, 24%, 40%, .075s); @include border-top-left-radius(8px);}
        .r2 {@include rect(  0, 24%, 46%, 40%, .15s);}
        .r3 {@include rect(  0, 70%, 30%, 25%, .225s); @include border-top-right-radius(8px);}
        .r4 {@include rect(40%,   0, 70%, 40%, .3s);}
        .r5 {@include rect(80%,   0, 35%, 20%, .375s); @include border-bottom-left-radius(8px);}
        .r6 {@include rect(25%, 70%, 30%, 65%, .45s);}
        .r7 {@include rect(80%, 35%, 65%, 20%, .525s); @include border-bottom-right-radius(8px);}
    }
        
    .content {
        display: inline-block; position: relative; z-index: 4;
        max-width: 400px; width: 100%; height: auto; padding: 50px;
        font-style: normal;
        
        @include on-phone {
            padding: 25px;
        }

        * {
            color: white;
        }

        > *:first-child {
            margin-top: 0;
            @include transition(1s 2s);
        }

        > *:nth-child(2) {
            @include transition(1.2s 2.3s);
        }

        > *:nth-child(3) {
            @include transition(1.4s 2.7s);
        }

        > *:nth-child(4) {
            margin-bottom: 0;
            @include transition(1.6s 3.2s);
        }

        p {
            text-align: center;
            text-align: justify;
        }
        
        a {
            @include transition(.2s);
        }
        
        a:hover {
            color: #cecece;
        }
    }
        
    &.hidden {
        visibility: hidden; 
        @include opacity(0);
        @include transition(all 0s .35s);

        .rects > * {
            @include opacity(0);
            @include transition(.3s);
        }

        .rects > *:not(.content) {
            @include transform(translate(-18%, -18%) scale(.6));

            &.red       {background-color: $bauhaus-red;}
            &.blue      {background-color: $bauhaus-blue;}
            &.orange    {background-color: $bauhaus-orange;}
            &.green     {background-color: $bauhaus-green;}
        }
        
        .content > * {
            @include transform(translate(0, 15px));
        }
    }
}

